CDPD-44556: Remove plugin implementations
Change-Id: I1979adafd12874b0b5d0736d4c9d8f5f4fa0089b