@@ -24,7 +24,6 @@ import com.hortonworks.registries.schemaregistry.DefaultSchemaRegistry;
 import com.hortonworks.registries.schemaregistry.ISchemaRegistry;
 import com.hortonworks.registries.schemaregistry.SchemaBranch;
 import com.hortonworks.registries.schemaregistry.SchemaIdVersion;
-import com.hortonworks.registries.common.hadoop.KerberosKeytabCheck;
 import com.hortonworks.registries.schemaregistry.SchemaMetadata;
 import com.hortonworks.registries.schemaregistry.SchemaMetadataInfo;
 import com.hortonworks.registries.schemaregistry.SchemaVersion;
@@ -34,8 +33,6 @@ import com.hortonworks.registries.schemaregistry.SerDesInfo;
 import com.hortonworks.registries.schemaregistry.SerDesPair;
 import com.hortonworks.registries.schemaregistry.authorizer.agent.util.SchemaTextStore;
 import com.hortonworks.registries.schemaregistry.authorizer.agent.util.SecurityContextForTesting;
-import com.hortonworks.registries.schemaregistry.authorizer.core.RangerAuthenticator;
-import com.hortonworks.registries.schemaregistry.authorizer.core.util.RangerKerberosAuthenticator;
 import com.hortonworks.registries.schemaregistry.authorizer.core.Authorizer;
 import com.hortonworks.registries.schemaregistry.authorizer.agent.util.TestAuthorizer;
 import com.hortonworks.registries.schemaregistry.authorizer.exception.AuthorizationException;
@@ -60,6 +57,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 
@@ -69,10 +67,8 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
 public class DefaultAuthorizationAgentTest {
-
-
+    
     private static AuthorizationAgent authorizationAgent;
-    private static RangerAuthenticator rangerAuthenticator;
     private static ISchemaRegistry schemaRegistry;
     private static SchemaIdVersion siv3;
     private static SchemaIdVersion siv31;
@@ -88,8 +84,6 @@ public class DefaultAuthorizationAgentTest {
         ///////////////////////////////// SchemaRegistry instantiation ////////////////
 
         final ImmutableMap.Builder<String, Long> schemaIdMap = ImmutableMap.builder();
-
-        rangerAuthenticator = new RangerKerberosAuthenticator(new KerberosKeytabCheck());
 
         Collection<Map<String, Object>> schemaProvidersConfig =
                 Collections.singleton(Collections.singletonMap("providerClass",
@@ -287,13 +281,13 @@ public class DefaultAuthorizationAgentTest {
         SecurityContext sc = new SecurityContextForTesting(user);
 
         // Authorized by p13, p14, p15, p16
-        authorizationAgent.authorizeDeleteSchemaMetadata(rangerAuthenticator.getUserAndGroups(sc),
+        authorizationAgent.authorizeDeleteSchemaMetadata(getUserAndGroups(sc),
                 schemaRegistry, "Schema3");
 
         try {
             String user999 = "user999";
             SecurityContext sc999 = new SecurityContextForTesting(user999);
-            authorizationAgent.authorizeDeleteSchemaMetadata(rangerAuthenticator.getUserAndGroups(sc999),
+            authorizationAgent.authorizeDeleteSchemaMetadata(getUserAndGroups(sc999),
                     schemaRegistry, "Schema3");
             fail("Expected an AuthorizationException to be thrown");
         } catch (AuthorizationException e) {
@@ -306,7 +300,7 @@ public class DefaultAuthorizationAgentTest {
             String user999 = "user33";
             SecurityContext sc999 = new SecurityContextForTesting(user999);
             // Partially authorized by p3
-            authorizationAgent.authorizeDeleteSchemaMetadata(rangerAuthenticator.getUserAndGroups(sc999),
+            authorizationAgent.authorizeDeleteSchemaMetadata(getUserAndGroups(sc999),
                     schemaRegistry, "Schema3");
             fail("Expected an AuthorizationException to be thrown");
         } catch (AuthorizationException e) {
@@ -320,7 +314,7 @@ public class DefaultAuthorizationAgentTest {
 
         // NOT_FOUND test cases
         try {
-            authorizationAgent.authorizeDeleteSchemaMetadata(rangerAuthenticator.getUserAndGroups(sc),
+            authorizationAgent.authorizeDeleteSchemaMetadata(getUserAndGroups(sc),
                     schemaRegistry, "SchemaNotFound");
             fail("Expected an SchemaNotFoundException to be thrown");
         } catch (SchemaNotFoundException e) {
@@ -338,7 +332,7 @@ public class DefaultAuthorizationAgentTest {
         String user = "user4";
         SecurityContext sc = new SecurityContextForTesting(user);
         ArrayList<SchemaMetadataInfo> schemas = new ArrayList();
-        Collection<SchemaMetadataInfo> resEmpty = authorizationAgent.authorizeFindSchemas(rangerAuthenticator.getUserAndGroups(sc), schemas);
+        Collection<SchemaMetadataInfo> resEmpty = authorizationAgent.authorizeFindSchemas(getUserAndGroups(sc), schemas);
         assertTrue(resEmpty.isEmpty());
 
         // 2
@@ -355,7 +349,7 @@ public class DefaultAuthorizationAgentTest {
                 .build();
         SchemaMetadataInfo smi1 = new SchemaMetadataInfo(sm1);
         schemas.add(smi1);
-        resEmpty = authorizationAgent.authorizeFindSchemas(rangerAuthenticator.getUserAndGroups(sc1), schemas);
+        resEmpty = authorizationAgent.authorizeFindSchemas(getUserAndGroups(sc1), schemas);
         assertTrue(resEmpty.isEmpty());
 
         // 3
@@ -372,7 +366,7 @@ public class DefaultAuthorizationAgentTest {
                 .build();
         SchemaMetadataInfo smi2 = new SchemaMetadataInfo(sm2);
         schemas.add(smi2);
-        Collection<SchemaMetadataInfo> resNonEmpty = authorizationAgent.authorizeFindSchemas(rangerAuthenticator.getUserAndGroups(sc2), schemas);
+        Collection<SchemaMetadataInfo> resNonEmpty = authorizationAgent.authorizeFindSchemas(getUserAndGroups(sc2), schemas);
         assertTrue(resNonEmpty.size() == 1);
         assertTrue(resNonEmpty.contains(smi2));
 
@@ -390,7 +384,7 @@ public class DefaultAuthorizationAgentTest {
                 .build();
         SchemaMetadataInfo smi3 = new SchemaMetadataInfo(sm3);
         schemas.add(smi3);
-        resNonEmpty = authorizationAgent.authorizeFindSchemas(rangerAuthenticator.getUserAndGroups(sc), schemas);
+        resNonEmpty = authorizationAgent.authorizeFindSchemas(getUserAndGroups(sc), schemas);
         assertTrue(resNonEmpty.size() == 2);
         assertTrue(resNonEmpty.contains(smi2));
         assertTrue(resNonEmpty.contains(smi3));
@@ -409,7 +403,7 @@ public class DefaultAuthorizationAgentTest {
                 .build();
         SchemaMetadataInfo smi4 = new SchemaMetadataInfo(sm4);
         schemas.add(smi4);
-        resNonEmpty = authorizationAgent.authorizeFindSchemas(rangerAuthenticator.getUserAndGroups(sc), schemas);
+        resNonEmpty = authorizationAgent.authorizeFindSchemas(getUserAndGroups(sc), schemas);
         assertTrue(resNonEmpty.size() == 2);
         assertTrue(resNonEmpty.contains(smi2));
         assertTrue(resNonEmpty.contains(smi3));
@@ -439,7 +433,7 @@ public class DefaultAuthorizationAgentTest {
 
         SecurityContext sc3 = new SecurityContextForTesting("user3");
         Collection<AggregatedSchemaMetadataInfo> res = authorizationAgent
-                .authorizeGetAggregatedSchemaList(rangerAuthenticator.getUserAndGroups(sc3), asmiList);
+                .authorizeGetAggregatedSchemaList(getUserAndGroups(sc3), asmiList);
         assertTrue(res.isEmpty());
 
         SchemaMetadataInfo smi3 = schemaRegistry.getSchemaMetadataInfo("Schema3");
@@ -463,12 +457,12 @@ public class DefaultAuthorizationAgentTest {
 
         asmiList.add(asmi);
         res = authorizationAgent
-                .authorizeGetAggregatedSchemaList(rangerAuthenticator.getUserAndGroups(sc3), asmiList);
+                .authorizeGetAggregatedSchemaList(getUserAndGroups(sc3), asmiList);
         assertTrue(res.size() == 1);
 
         SecurityContext sc999 = new SecurityContextForTesting("user999");
         res = authorizationAgent
-                .authorizeGetAggregatedSchemaList(rangerAuthenticator.getUserAndGroups(sc999), asmiList);
+                .authorizeGetAggregatedSchemaList(getUserAndGroups(sc999), asmiList);
         assertTrue(res.isEmpty());
 
         // NOT_FOUND TEST CASES do not exist
@@ -496,11 +490,11 @@ public class DefaultAuthorizationAgentTest {
                         serDesInfo);
 
         SecurityContext sc3 = new SecurityContextForTesting("user3");
-        authorizationAgent.authorizeGetAggregatedSchemaInfo(rangerAuthenticator.getUserAndGroups(sc3), asmi);
+        authorizationAgent.authorizeGetAggregatedSchemaInfo(getUserAndGroups(sc3), asmi);
 
         try {
             SecurityContext sc999 = new SecurityContextForTesting("user999");
-            authorizationAgent.authorizeGetAggregatedSchemaInfo(rangerAuthenticator.getUserAndGroups(sc999), asmi);
+            authorizationAgent.authorizeGetAggregatedSchemaInfo(getUserAndGroups(sc999), asmi);
             fail("Expected an AuthorizationException to be thrown");
         } catch (AuthorizationException e) {
             String expectedMsg = "User 'user999' does not have [read] permission on " +
@@ -510,7 +504,7 @@ public class DefaultAuthorizationAgentTest {
 
         try {
             SecurityContext sc100 = new SecurityContextForTesting("user100");
-            authorizationAgent.authorizeGetAggregatedSchemaInfo(rangerAuthenticator.getUserAndGroups(sc100), asmi);
+            authorizationAgent.authorizeGetAggregatedSchemaInfo(getUserAndGroups(sc100), asmi);
         } catch (AuthorizationException e) {
             String expectedMsg = "User 'user100' does not have [read] permission on " +
                     "SchemaBranch{ schemaGroupName='Group3', schemaMetadataName='Schema3', schemaBranchName='Branch3' }";
@@ -519,7 +513,7 @@ public class DefaultAuthorizationAgentTest {
 
         try {
             SecurityContext sc101 = new SecurityContextForTesting("user101");
-            authorizationAgent.authorizeGetAggregatedSchemaInfo(rangerAuthenticator.getUserAndGroups(sc101), asmi);
+            authorizationAgent.authorizeGetAggregatedSchemaInfo(getUserAndGroups(sc101), asmi);
         } catch (AuthorizationException e) {
             String expectedMsg = errorMsgForUnathorizedSchemaVersion("user101",
                     "read", "Group3", "Schema3", "Branch3");
@@ -528,7 +522,7 @@ public class DefaultAuthorizationAgentTest {
 
         try {
             SecurityContext sc101 = new SecurityContextForTesting("user102");
-            authorizationAgent.authorizeGetAggregatedSchemaInfo(rangerAuthenticator.getUserAndGroups(sc101), asmi);
+            authorizationAgent.authorizeGetAggregatedSchemaInfo(getUserAndGroups(sc101), asmi);
         } catch (AuthorizationException e) {
             String expectedMsg = "User 'user102' does not have [read] permission on SerDe{ serDeName='*' }";
             assertEquals(expectedMsg, e.getMessage());
@@ -546,7 +540,7 @@ public class DefaultAuthorizationAgentTest {
         // Empty array should stay empty
         List<SchemaVersionKey> versions = new ArrayList<>();
         Collection<SchemaVersionKey> res = authorizationAgent
-                .authorizeFindSchemasByFields(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry, versions);
+                .authorizeFindSchemasByFields(getUserAndGroups(sc3), schemaRegistry, versions);
         assertTrue(res.isEmpty());
 
         SchemaVersionKey svi3 = new SchemaVersionKey("Schema3", siv3.getVersion());
@@ -556,7 +550,7 @@ public class DefaultAuthorizationAgentTest {
 
         List<SchemaVersionKey> expected = new ArrayList<>(versions);
         // Authorized by p7
-        res = authorizationAgent.authorizeFindSchemasByFields(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry, versions);
+        res = authorizationAgent.authorizeFindSchemasByFields(getUserAndGroups(sc3), schemaRegistry, versions);
         assertEquals(expected, res);
 
         SchemaVersionKey svi4 = new SchemaVersionKey("Schema4", siv4.getVersion());
@@ -566,7 +560,7 @@ public class DefaultAuthorizationAgentTest {
         String user4 = "user4";
         SecurityContext sc4 = new SecurityContextForTesting(user4);
         // Authorized by p11
-        res = authorizationAgent.authorizeFindSchemasByFields(rangerAuthenticator.getUserAndGroups(sc4), schemaRegistry, versions);
+        res = authorizationAgent.authorizeFindSchemasByFields(getUserAndGroups(sc4), schemaRegistry, versions);
         assertEquals(expected, res);
 
         // NOT_FOUND TEST CASES do not exist
@@ -593,15 +587,15 @@ public class DefaultAuthorizationAgentTest {
 
         // Access allowed by policy p3
         authorizationAgent.authorizeSchemaMetadata(
-                rangerAuthenticator.getUserAndGroups(sc3),
+                getUserAndGroups(sc3),
                 sm3,
                 Authorizer.AccessType.READ);
         authorizationAgent.authorizeSchemaMetadata(
-                rangerAuthenticator.getUserAndGroups(sc3),
+                getUserAndGroups(sc3),
                 smi3, 
                 Authorizer.AccessType.UPDATE);
         authorizationAgent.authorizeSchemaMetadata(
-                rangerAuthenticator.getUserAndGroups(sc3),
+                getUserAndGroups(sc3),
                 schemaRegistry, 
                 sm3.getName(), 
                 Authorizer.AccessType.READ);
@@ -609,7 +603,7 @@ public class DefaultAuthorizationAgentTest {
         ///////////////////////////// Negative cases /////////////////////////////////
 
         try {
-            authorizationAgent.authorizeSchemaMetadata(rangerAuthenticator.getUserAndGroups(sc3),
+            authorizationAgent.authorizeSchemaMetadata(getUserAndGroups(sc3),
                     smi3, Authorizer.AccessType.DELETE);
         } catch (NotSupportedException e) {
             String expectedMsg = "AccessType.DELETE is not supported for authorizeSchemaMetadata method";
@@ -621,7 +615,7 @@ public class DefaultAuthorizationAgentTest {
         try {
             String user4 = "user4";
             SecurityContext sc4 = new SecurityContextForTesting(user4);
-            authorizationAgent.authorizeSchemaMetadata(rangerAuthenticator.getUserAndGroups(sc4), sm3, Authorizer.AccessType.UPDATE);
+            authorizationAgent.authorizeSchemaMetadata(getUserAndGroups(sc4), sm3, Authorizer.AccessType.UPDATE);
             fail("Expected an AuthorizationException to be thrown");
         } catch (AuthorizationException e) {
             String expectedMsg = "User 'user4' does not have [update] permission on " +
@@ -629,7 +623,7 @@ public class DefaultAuthorizationAgentTest {
             assertEquals(expectedMsg, e.getMessage());
         }
         try {
-            authorizationAgent.authorizeSchemaMetadata(rangerAuthenticator.getUserAndGroups(sc3), smi3, Authorizer.AccessType.CREATE);
+            authorizationAgent.authorizeSchemaMetadata(getUserAndGroups(sc3), smi3, Authorizer.AccessType.CREATE);
             fail("Expected an AuthorizationException to be thrown");
         } catch (AuthorizationException e) {
             String expectedMsg = "User 'user3' does not have [create] permission on " +
@@ -638,7 +632,7 @@ public class DefaultAuthorizationAgentTest {
         }
         try {
             authorizationAgent.authorizeSchemaMetadata(
-                    rangerAuthenticator.getUserAndGroups(sc3),
+                    getUserAndGroups(sc3),
                     schemaRegistry, 
                     sm3.getName(),
                     Authorizer.AccessType.CREATE);
@@ -657,7 +651,7 @@ public class DefaultAuthorizationAgentTest {
                 .build();
         SchemaMetadataInfo smi4 = new SchemaMetadataInfo(sm4);
         try {
-            authorizationAgent.authorizeSchemaMetadata(rangerAuthenticator.getUserAndGroups(sc3), sm4, Authorizer.AccessType.READ);
+            authorizationAgent.authorizeSchemaMetadata(getUserAndGroups(sc3), sm4, Authorizer.AccessType.READ);
             fail("Expected an AuthorizationException to be thrown");
         } catch (AuthorizationException e) {
             String expectedMsg = "User 'user3' does not have [read] permission on " +
@@ -665,7 +659,7 @@ public class DefaultAuthorizationAgentTest {
             assertEquals(expectedMsg, e.getMessage());
         }
         try {
-            authorizationAgent.authorizeSchemaMetadata(rangerAuthenticator.getUserAndGroups(sc3), smi4, Authorizer.AccessType.READ);
+            authorizationAgent.authorizeSchemaMetadata(getUserAndGroups(sc3), smi4, Authorizer.AccessType.READ);
             fail("Expected an AuthorizationException to be thrown");
         } catch (AuthorizationException e) {
             String expectedMsg = "User 'user3' does not have [read] permission on " +
@@ -674,7 +668,7 @@ public class DefaultAuthorizationAgentTest {
         }
         try {
             authorizationAgent.authorizeSchemaMetadata(
-                    rangerAuthenticator.getUserAndGroups(sc3),
+                    getUserAndGroups(sc3),
                     schemaRegistry,
                     sm4.getName(),
                     Authorizer.AccessType.DELETE);
@@ -686,7 +680,7 @@ public class DefaultAuthorizationAgentTest {
 
         // NOT_FOUND test cases
         try {
-            authorizationAgent.authorizeSchemaMetadata(rangerAuthenticator.getUserAndGroups(sc3),
+            authorizationAgent.authorizeSchemaMetadata(getUserAndGroups(sc3),
                     schemaRegistry, "SchemaNotFound", Authorizer.AccessType.READ);
             fail("Expected an SchemaNotFoundException to be thrown");
         } catch (SchemaNotFoundException e) {
@@ -706,13 +700,13 @@ public class DefaultAuthorizationAgentTest {
         String schemaName3 = "Schema3";
 
         // Access allowed by p4 (for creating Branch3) and p5 (for reading siv3)
-        authorizationAgent.authorizeCreateSchemaBranch(rangerAuthenticator.getUserAndGroups(sc3),
+        authorizationAgent.authorizeCreateSchemaBranch(getUserAndGroups(sc3),
                 schemaRegistry,
                 schemaNameToIdMap.get(schemaName3),
                  new Long(siv3.getSchemaVersionId()), "Branch3");
 
         // Access allowed by p6 (for creating Branch3) and p7 (for reading siv31)
-        authorizationAgent.authorizeCreateSchemaBranch(rangerAuthenticator.getUserAndGroups(sc3),
+        authorizationAgent.authorizeCreateSchemaBranch(getUserAndGroups(sc3),
                 schemaRegistry,
                 schemaNameToIdMap.get(schemaName3),
                 siv31.getSchemaVersionId(), "Branch4");
@@ -722,7 +716,7 @@ public class DefaultAuthorizationAgentTest {
         String user999 = "user999";
         SecurityContext sc999 = new SecurityContextForTesting(user999);
         try {
-            authorizationAgent.authorizeCreateSchemaBranch(rangerAuthenticator.getUserAndGroups(sc999),
+            authorizationAgent.authorizeCreateSchemaBranch(getUserAndGroups(sc999),
                     schemaRegistry,
                     schemaNameToIdMap.get(schemaName3),
                     new Long(siv31.getSchemaVersionId()), "Branch4");
@@ -737,7 +731,7 @@ public class DefaultAuthorizationAgentTest {
         SecurityContext sc4 = new SecurityContextForTesting(user4);
         try {
             // Creation is allowed by p6
-            authorizationAgent.authorizeCreateSchemaBranch(rangerAuthenticator.getUserAndGroups(sc4),
+            authorizationAgent.authorizeCreateSchemaBranch(getUserAndGroups(sc4),
                     schemaRegistry,
                     schemaNameToIdMap.get(schemaName3),
                     new Long(siv31.getSchemaVersionId()), "Branch4");
@@ -750,7 +744,7 @@ public class DefaultAuthorizationAgentTest {
 
         // NOT_FOUND test cases
         try {
-            authorizationAgent.authorizeCreateSchemaBranch(rangerAuthenticator.getUserAndGroups(sc3),
+            authorizationAgent.authorizeCreateSchemaBranch(getUserAndGroups(sc3),
                     schemaRegistry,
                     schemaNameToIdMap.get(schemaName3),
                     -9999L,
@@ -761,7 +755,7 @@ public class DefaultAuthorizationAgentTest {
         }
 
         try {
-            authorizationAgent.authorizeCreateSchemaBranch(rangerAuthenticator.getUserAndGroups(sc4),
+            authorizationAgent.authorizeCreateSchemaBranch(getUserAndGroups(sc4),
                     schemaRegistry,
                     99999999999999L,
                     siv31.getSchemaVersionId(),
@@ -779,7 +773,7 @@ public class DefaultAuthorizationAgentTest {
         SecurityContext sc5 = new SecurityContextForTesting(user5);
 
         // Allowed by p8, p12
-        authorizationAgent.authorizeDeleteSchemaBranch(rangerAuthenticator.getUserAndGroups(sc5),
+        authorizationAgent.authorizeDeleteSchemaBranch(getUserAndGroups(sc5),
                 schemaRegistry,
                 new Long(branch3.getId()));
 
@@ -788,7 +782,7 @@ public class DefaultAuthorizationAgentTest {
 
         /////////////////// Negative cases //////////////////////////
         try {
-            authorizationAgent.authorizeDeleteSchemaBranch(rangerAuthenticator.getUserAndGroups(sc999),
+            authorizationAgent.authorizeDeleteSchemaBranch(getUserAndGroups(sc999),
                     schemaRegistry,
                     new Long(branch3.getId()));
             fail("Expected an AuthorizationException to be thrown");
@@ -803,7 +797,7 @@ public class DefaultAuthorizationAgentTest {
 
         /////////////////// Negative cases //////////////////////////
         try {
-            authorizationAgent.authorizeDeleteSchemaBranch(rangerAuthenticator.getUserAndGroups(sc88),
+            authorizationAgent.authorizeDeleteSchemaBranch(getUserAndGroups(sc88),
                     schemaRegistry,
                     new Long(branch3.getId()));
             fail("Expected an AuthorizationException to be thrown");
@@ -815,7 +809,7 @@ public class DefaultAuthorizationAgentTest {
 
         // NOT_FOUND test cases
         try {
-            authorizationAgent.authorizeDeleteSchemaBranch(rangerAuthenticator.getUserAndGroups(sc88),
+            authorizationAgent.authorizeDeleteSchemaBranch(getUserAndGroups(sc88),
                     schemaRegistry,
                     new Long(-9999));
         } catch (SchemaBranchNotFoundException e) {
@@ -830,7 +824,7 @@ public class DefaultAuthorizationAgentTest {
         SecurityContext sc6 = new SecurityContextForTesting(user6);
         ArrayList<SchemaBranch> branches = new ArrayList<>();
         Collection<SchemaBranch> res =
-                authorizationAgent.authorizeGetAllBranches(rangerAuthenticator.getUserAndGroups(sc6), schemaRegistry,
+                authorizationAgent.authorizeGetAllBranches(getUserAndGroups(sc6), schemaRegistry,
                         "Schema3", branches);
         assertTrue(res.isEmpty());
 
@@ -843,20 +837,20 @@ public class DefaultAuthorizationAgentTest {
 
         Collection<SchemaBranch> expected = new ArrayList<>(branches);
         // Filter by p8, p9
-        res = authorizationAgent.authorizeGetAllBranches(rangerAuthenticator.getUserAndGroups(sc6), schemaRegistry,
+        res = authorizationAgent.authorizeGetAllBranches(getUserAndGroups(sc6), schemaRegistry,
                 "Schema3", branches);
         assertEquals(expected, res);
 
         expected = new ArrayList<>(branches);
         branches.add(branch4);
         // Filter by p8, p9
-        res = authorizationAgent.authorizeGetAllBranches(rangerAuthenticator.getUserAndGroups(sc6), schemaRegistry,
+        res = authorizationAgent.authorizeGetAllBranches(getUserAndGroups(sc6), schemaRegistry,
                 "Schema3", branches);
         assertEquals(expected, res);
 
         // NOT_FOUND test cases
         try {
-            authorizationAgent.authorizeGetAllBranches(rangerAuthenticator.getUserAndGroups(sc6), schemaRegistry,
+            authorizationAgent.authorizeGetAllBranches(getUserAndGroups(sc6), schemaRegistry,
                     "SchemaNotFound", branches);
         } catch (SchemaNotFoundException e) {
             String expectedMsg = "No SchemaMetadata exists with key: SchemaNotFound";
@@ -874,21 +868,21 @@ public class DefaultAuthorizationAgentTest {
         ///////////////// Positive cases ////////////////////////////
 
         // Authorized by p5
-        authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc3),
+        authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc3),
                 schemaRegistry,
                 "Schema3",
                 "MASTER",
                 Authorizer.AccessType.READ);
 
         SchemaVersionKey svk3 = new SchemaVersionKey("Schema3", siv3.getVersion());
-        authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry, svk3,  Authorizer.AccessType.DELETE);
+        authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc3), schemaRegistry, svk3,  Authorizer.AccessType.DELETE);
 
         SchemaVersionInfo svi3 = schemaRegistry.getSchemaVersionInfo(siv3);
-        authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry, svi3, Authorizer.AccessType.READ);
+        authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc3), schemaRegistry, svi3, Authorizer.AccessType.READ);
 
-        authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry, siv3, Authorizer.AccessType.DELETE);
+        authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc3), schemaRegistry, siv3, Authorizer.AccessType.DELETE);
 
-        authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry,
+        authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc3), schemaRegistry,
                 siv31.getSchemaVersionId(), Authorizer.AccessType.READ);
 
         /////////////////// Negative cases //////////////////////////
@@ -896,7 +890,7 @@ public class DefaultAuthorizationAgentTest {
         String user4 = "user4";
         SecurityContext sc4 = new SecurityContextForTesting(user4);
         try {
-            authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc4),
+            authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc4),
                     schemaRegistry,
                     "Schema3",
                     "MASTER",
@@ -909,7 +903,7 @@ public class DefaultAuthorizationAgentTest {
         }
 
         try {
-            authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry, svk3, Authorizer.AccessType.UPDATE);
+            authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc3), schemaRegistry, svk3, Authorizer.AccessType.UPDATE);
             fail("Expected an AuthorizationException to be thrown");
         } catch (AuthorizationException e) {
             String expectedMsg = errorMsgForUnathorizedSchemaVersion("user3",
@@ -918,7 +912,7 @@ public class DefaultAuthorizationAgentTest {
         }
 
         try {
-            authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc4), schemaRegistry, svi3, Authorizer.AccessType.CREATE);
+            authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc4), schemaRegistry, svi3, Authorizer.AccessType.CREATE);
             fail("Expected an AuthorizationException to be thrown");
         } catch (AuthorizationException e) {
             String expectedMsg = errorMsgForUnathorizedSchemaVersion("user4",
@@ -927,7 +921,7 @@ public class DefaultAuthorizationAgentTest {
         }
 
         try {
-            authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry, siv31, Authorizer.AccessType.CREATE);
+            authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc3), schemaRegistry, siv31, Authorizer.AccessType.CREATE);
             fail("Expected an AuthorizationException to be thrown");
         } catch (AuthorizationException e) {
             String expectedMsg = errorMsgForUnathorizedSchemaVersion("user3",
@@ -936,7 +930,7 @@ public class DefaultAuthorizationAgentTest {
         }
 
         try {
-            authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry,
+            authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc3), schemaRegistry,
                     siv31.getSchemaVersionId(), Authorizer.AccessType.UPDATE);
             fail("Expected an AuthorizationException to be thrown");
         } catch (AuthorizationException e) {
@@ -948,7 +942,7 @@ public class DefaultAuthorizationAgentTest {
         // NOT_FOUND test cases
 
         try {
-            authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc3),
+            authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc3),
                     schemaRegistry,
                     "SchemaNotFound",
                     "MASTER",
@@ -961,7 +955,7 @@ public class DefaultAuthorizationAgentTest {
 
         try {
             svk3 = new SchemaVersionKey("SchemaNotFound", siv3.getVersion());
-            authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry, svk3, Authorizer.AccessType.DELETE);
+            authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc3), schemaRegistry, svk3, Authorizer.AccessType.DELETE);
             fail("Expected an SchemaNotFoundException to be thrown");
         } catch (SchemaNotFoundException e) {
             String expectedMsg = "No SchemaMetadata exists with key: SchemaNotFound";
@@ -970,7 +964,7 @@ public class DefaultAuthorizationAgentTest {
 
         try {
             svk3 = new SchemaVersionKey("Schema3", -99999);
-            authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry, svk3, Authorizer.AccessType.DELETE);
+            authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc3), schemaRegistry, svk3, Authorizer.AccessType.DELETE);
             fail("Expected an SchemaNotFoundException to be thrown");
         } catch (SchemaNotFoundException e) {
             String expectedMsg = "No Schema version exists with name Schema3 and version -99999";
@@ -979,7 +973,7 @@ public class DefaultAuthorizationAgentTest {
 
         try {
             SchemaIdVersion notFoundSchemaIdVersion = new SchemaIdVersion(-9999L);
-            authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry,
+            authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc3), schemaRegistry,
                     notFoundSchemaIdVersion, Authorizer.AccessType.DELETE);
             fail("Expected an SchemaNotFoundException to be thrown");
         } catch (SchemaNotFoundException e) {
@@ -988,8 +982,8 @@ public class DefaultAuthorizationAgentTest {
         }
 
         try {
-            authorizationAgent.authorizeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry,
-                new Long(-9999), Authorizer.AccessType.READ);
+            authorizationAgent.authorizeSchemaVersion(getUserAndGroups(sc3), schemaRegistry,
+                    Long.valueOf(-9999), Authorizer.AccessType.READ);
             fail("Expected an SchemaNotFoundException to be thrown");
         } catch (SchemaNotFoundException e) {
             String expectedMsg = "No Schema version exists with id -9999";
@@ -1021,7 +1015,7 @@ public class DefaultAuthorizationAgentTest {
         SchemaMetadataInfo smi3 = new SchemaMetadataInfo(sm3);
 
         // Access allowed by p3 and p10
-        authorizationAgent.authorizeGetSerializers(rangerAuthenticator.getUserAndGroups(sc3), smi3);
+        authorizationAgent.authorizeGetSerializers(getUserAndGroups(sc3), smi3);
 
         /////////////////// Negative cases //////////////////////////
 
@@ -1029,7 +1023,7 @@ public class DefaultAuthorizationAgentTest {
         SecurityContext sc5 = new SecurityContextForTesting(user5);
 
         try {
-            authorizationAgent.authorizeGetSerializers(rangerAuthenticator.getUserAndGroups(sc5), smi3);
+            authorizationAgent.authorizeGetSerializers(getUserAndGroups(sc5), smi3);
         } catch (AuthorizationException e) {
             String expectedMsg = "User 'user5' does not have [read] permission on " +
                     "SchemaMetadata{ schemaGroupName='Group3', schemaMetadataName='Schema3' }";
@@ -1046,7 +1040,7 @@ public class DefaultAuthorizationAgentTest {
         SchemaMetadataInfo smi1 = new SchemaMetadataInfo(sm1);
         try {
             // Access allowed to metadata by p1
-            authorizationAgent.authorizeGetSerializers(rangerAuthenticator.getUserAndGroups(sc1), smi1);
+            authorizationAgent.authorizeGetSerializers(getUserAndGroups(sc1), smi1);
         } catch (AuthorizationException e) {
             String expectedMsg = "User 'user1' does not have [read] permission on " +
                     "SerDe{ serDeName='*' }";
@@ -1061,13 +1055,13 @@ public class DefaultAuthorizationAgentTest {
         ///////////////// Positive cases ////////////////////////////
         String user3 = "user3";
         SecurityContext sc3 = new SecurityContextForTesting(user3);
-        authorizationAgent.authorizeSerDes(rangerAuthenticator.getUserAndGroups(sc3), Authorizer.AccessType.READ);
+        authorizationAgent.authorizeSerDes(getUserAndGroups(sc3), Authorizer.AccessType.READ);
 
         /////////////////// Negative cases //////////////////////////
         String user999 = "user999";
         SecurityContext sc999 = new SecurityContextForTesting(user999);
         try {
-            authorizationAgent.authorizeSerDes(rangerAuthenticator.getUserAndGroups(sc999), Authorizer.AccessType.READ);
+            authorizationAgent.authorizeSerDes(getUserAndGroups(sc999), Authorizer.AccessType.READ);
         } catch (AuthorizationException e) {
             String expectedMsg = "User 'user999' does not have [read] permission on SerDe{ serDeName='*' }";
             assertEquals(expectedMsg, e.getMessage());
@@ -1084,14 +1078,14 @@ public class DefaultAuthorizationAgentTest {
         SecurityContext sc3 = new SecurityContextForTesting(user3);
 
         // Access allowed by p3 and p10
-        authorizationAgent.authorizeMapSchemaWithSerDes(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry, "Schema3");
+        authorizationAgent.authorizeMapSchemaWithSerDes(getUserAndGroups(sc3), schemaRegistry, "Schema3");
 
         /////////////////// Negative cases //////////////////////////
         String user5 = "user5";
         SecurityContext sc5 = new SecurityContextForTesting(user5);
 
         try {
-            authorizationAgent.authorizeMapSchemaWithSerDes(rangerAuthenticator.getUserAndGroups(sc5), schemaRegistry, "Schema3");
+            authorizationAgent.authorizeMapSchemaWithSerDes(getUserAndGroups(sc5), schemaRegistry, "Schema3");
         } catch (AuthorizationException e) {
             String expectedMsg = "User 'user5' does not have [read] permission on SerDe{ serDeName='*' }";
             assertEquals(expectedMsg, e.getMessage());
@@ -1101,7 +1095,7 @@ public class DefaultAuthorizationAgentTest {
         SecurityContext sc4 = new SecurityContextForTesting(user4);
         try {
             // Accessed allowed to serdes by p10
-            authorizationAgent.authorizeMapSchemaWithSerDes(rangerAuthenticator.getUserAndGroups(sc4), schemaRegistry, "Schema3");
+            authorizationAgent.authorizeMapSchemaWithSerDes(getUserAndGroups(sc4), schemaRegistry, "Schema3");
         } catch (AuthorizationException e) {
             String expectedMsg = "User 'user4' does not have [update] permission on " +
                     "SchemaMetadata{ schemaGroupName='Group3', schemaMetadataName='Schema3' }";
@@ -1110,7 +1104,7 @@ public class DefaultAuthorizationAgentTest {
 
         // NOT_FOUND test cases
         try {
-            authorizationAgent.authorizeMapSchemaWithSerDes(rangerAuthenticator.getUserAndGroups(sc4), schemaRegistry, "SchemaNotFound");
+            authorizationAgent.authorizeMapSchemaWithSerDes(getUserAndGroups(sc4), schemaRegistry, "SchemaNotFound");
         } catch (SchemaNotFoundException e) {
             String expectedMsg = "No SchemaMetadata exists with key: SchemaNotFound";
             assertEquals(expectedMsg, e.getMessage());
@@ -1125,14 +1119,14 @@ public class DefaultAuthorizationAgentTest {
         SecurityContext sc3 = new SecurityContextForTesting(user3);
 
         // Accessed allowed by p7
-        authorizationAgent.authorizeMergeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry, siv31.getSchemaVersionId());
+        authorizationAgent.authorizeMergeSchemaVersion(getUserAndGroups(sc3), schemaRegistry, siv31.getSchemaVersionId());
 
         /////////////////// Negative cases //////////////////////////
         String user999 = "user999";
         SecurityContext sc999 = new SecurityContextForTesting(user999);
 
         try {
-            authorizationAgent.authorizeMergeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc999), schemaRegistry, siv31.getSchemaVersionId());
+            authorizationAgent.authorizeMergeSchemaVersion(getUserAndGroups(sc999), schemaRegistry, siv31.getSchemaVersionId());
         } catch (AuthorizationException e) {
             String expectedMsg = errorMsgForUnathorizedSchemaVersion("user999",
                     "read", "Group3", "Schema3", "Branch3");
@@ -1143,7 +1137,7 @@ public class DefaultAuthorizationAgentTest {
         SecurityContext sc33 = new SecurityContextForTesting(user33);
         try {
             // Read is allowed by p7
-            authorizationAgent.authorizeMergeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc33), schemaRegistry, siv31.getSchemaVersionId());
+            authorizationAgent.authorizeMergeSchemaVersion(getUserAndGroups(sc33), schemaRegistry, siv31.getSchemaVersionId());
         } catch (AuthorizationException e) {
             String expectedMsg = errorMsgForUnathorizedSchemaVersion("user33",
                     "create", "Group3", "Schema3", "MASTER");
@@ -1152,7 +1146,7 @@ public class DefaultAuthorizationAgentTest {
 
         // NOT_FOUND test cases
         try {
-            authorizationAgent.authorizeMergeSchemaVersion(rangerAuthenticator.getUserAndGroups(sc33), schemaRegistry, -9999L);
+            authorizationAgent.authorizeMergeSchemaVersion(getUserAndGroups(sc33), schemaRegistry, -9999L);
         } catch (SchemaNotFoundException e) {
             String expectedMsg = "No Schema version exists with id -9999";
             assertEquals(expectedMsg, e.getMessage());
@@ -1167,7 +1161,7 @@ public class DefaultAuthorizationAgentTest {
         // Empty array should stay empty
         List<SchemaVersionInfo> versions = new ArrayList<>();
         Collection<SchemaVersionInfo> res = authorizationAgent.authorizeGetAllVersions(
-                rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry, versions);
+                getUserAndGroups(sc3), schemaRegistry, versions);
         assertTrue(res.isEmpty());
 
         SchemaVersionInfo svi3 = schemaRegistry.getSchemaVersionInfo(siv3);
@@ -1177,7 +1171,7 @@ public class DefaultAuthorizationAgentTest {
 
         List<SchemaVersionInfo> expected = new ArrayList<>(versions);
         // Authorized by p7
-        res = authorizationAgent.authorizeGetAllVersions(rangerAuthenticator.getUserAndGroups(sc3), schemaRegistry, versions);
+        res = authorizationAgent.authorizeGetAllVersions(getUserAndGroups(sc3), schemaRegistry, versions);
         assertEquals(expected, res);
 
         SchemaVersionInfo svi4 = schemaRegistry.getSchemaVersionInfo(siv4);
@@ -1187,9 +1181,13 @@ public class DefaultAuthorizationAgentTest {
         String user4 = "user4";
         SecurityContext sc4 = new SecurityContextForTesting(user4);
         // Authorized by p11
-        res = authorizationAgent.authorizeGetAllVersions(rangerAuthenticator.getUserAndGroups(sc4), schemaRegistry, versions);
+        res = authorizationAgent.authorizeGetAllVersions(getUserAndGroups(sc4), schemaRegistry, versions);
         assertEquals(expected, res);
 
         // NOT_FOUND test cases do not exist
+    }
+
+    private Authorizer.UserAndGroups getUserAndGroups(SecurityContext sc) {
+        return new Authorizer.UserAndGroups(sc.getUserPrincipal().getName(), new HashSet<>());
     }
 }
